# dials_agent

./: .gitignore  dials  sync_to_remote.sh
dials_agent/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  cli.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run_agent.py  setup.sh
dials_agent/core/: __init__.py  claude_client.py  prompts.py  tools.py  tutorials.py
dials_agent/dials/: __init__.py  commands.py  executor.py  parser.py  workflow.py
docs/: fetch_docs.py
docs/programs/: README.md  dials_align_crystal.md  dials_anvil_correction.md  dials_apply_mask.md  dials_check_indexing_symmetry.md  dials_combine_experiments.md  dials_cosym.md  dials_create_profile_model.md  dials_estimate_gain.md  dials_estimate_resolution.md  dials_export.md  dials_filter_reflections.md  dials_find_spots.md  dials_find_spots_server.md  dials_generate_mask.md  dials_image_viewer.md  dials_import.md  dials_import_xds.md  dials_index.md  dials_integrate.md  dials_merge_cbf.md  dials_missing_reflections.md  dials_plot_scan_varying_model.md  dials_predict.md  dials_refine.md  dials_refine_bravais_settings.md  dials_reindex.md  dials_report.md  dials_scale.md  dials_search_beam_position.md  dials_show.md  dials_spot_counts_per_image.md  dials_stereographic_projection.md  dials_symmetry.md  dials_two_theta_refine.md
docs/tutorials/: betalactamase_tutorial.md
plans/: dials_ai_agent_knowledge_base.md  dials_ai_agent_plan.md  dials_algorithmic_optimizations.md  dials_performance_analysis.md
tutorial/: COWS_PIGS_PEOPLE.md  file.list  ins10_1.nxs.1
